# accountabilityTracker

./: .gitignore  First run using multiprocessing  Main.py  README.md  output.txt  pyproject.toml  requirements.txt  requirements_dev.txt  scrapper.py  website_predictor.py
Category Predictor/: websitePredictor.py
Scrapper/: metaExtractor.py  scrapper.py
Utils/: utils.py
src/Scrapper/: metaExtractor.py  scrapper.py
src/Utils/: utils.py
src/websitePredictor/: websitePredictor.py
tests/: test_scrapper.py  test_websiteExtractor.py
websitePredictor/: websitePredictor.py
